# kaneo-cli

./: AGENTS.md  Cargo.toml  Makefile  README.md  install.ps1  install.sh  rustfmt.toml
.agents/skills/rust-code-style/: SKILL.md
.github/workflows/: checks.yml  deployment.yml
src/: errors.rs  install_skill.rs  lib.rs  main.rs  output.rs  upgrade.rs
src/api/: client.rs  types.rs
src/auth/: config.rs  context.rs  crypto.rs  mod.rs
src/cli/: columns.rs  columns_handler.rs  labels.rs  labels_handler.rs  login.rs  mod.rs  projects.rs  projects_handler.rs  search_handler.rs  set_unset.rs  tasks.rs  tasks_handler.rs  workspaces.rs  workspaces_handler.rs
tests/: integration_tests.rs
