[package]
name = "kaneo-cli"
version = "0.1.9"
edition = "2024"
description = "CLI for Kaneo project management"
license = "MIT"
repository = "https://github.com/EzyGang/kaneo-cli"

[[bin]]
name = "kaneo"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
console = "0.16"
dirs = "6"
flate2 = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
lto = "thin"
strip = true
codegen-units = 4
